# Fullscreen-Fix

./: CMakeLists.txt  about.md  changelog.md  mod.json  readme.md
hooks/: FullscreenFix.hpp  FullscreenFix.mm
structures/: Functions.hpp
